--- a/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
@@ -33,7 +33,7 @@
 
   .modal-dialog-header {
     .clearfix();
-    padding: 30px 30px 10px 30px;
+    padding: 30px 20px 10px 30px;
     box-sizing: border-box;
 
     h2 {
@@ -54,16 +54,14 @@
   }
 
   .modal-dialog-body {
-    padding: 15px 30px 0 30px;
+    padding: 15px 20px 0 30px;
     flex: 1;
     overflow: auto;
-    box-sizing: border-box;
     max-height: 50vh;
   }
 
   .modal-dialog-footer {
     padding: 20px 30px;
-    height: 32px; //72px total height
   }
 
   .dialog-content {
