--- a/src/main/resources/assets/admin/common/styles/apps/content/publish/issue-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/apps/content/publish/issue-dialog.less
@@ -28,7 +28,6 @@
   }
 
   .dialog-content {
-    overflow-y: auto;
 
     .content-combo-box {
       .selected-options {
